[Bug #19476]: correct cache index computation for repetition (#7457)